@@ -40,7 +40,7 @@ Chain		getPointedObjectsDevice(Device dev, Any pos, Chain ch);
 status		inspectDevice(Device dev, EventObj ev);
 status		eventDevice(Any obj, EventObj ev);
 Button		getDefaultButtonDevice(Device d);
-status		advanceDevice(Device dev, Graphical gr, Bool propagate);
+status		advanceDevice(Device dev, Graphical gr, Bool propagate, Name direction);
 status		requestComputeDevice(Device dev, Any val);
 status		computeGraphicalsDevice(Device dev);
 status		computeLayoutDevice(Device dev);
