@@ -337,11 +337,11 @@ flashTab(Tab t, Area a, Int time)
 
 
 static status
-advanceTab(Tab t, Graphical gr, Bool propagate)
+advanceTab(Tab t, Graphical gr, Bool propagate, Name direction)
 { if ( isDefault(propagate) )
     propagate = OFF;
 
-  return advanceDevice((Device)t, gr, propagate);
+  return advanceDevice((Device)t, gr, propagate, direction);
 }
 
 
@@ -356,7 +356,10 @@ static char *T_geometry[] =
 static char *T_flash[] =
 	{ "area=[area]", "time=[int]" };
 static char *T_advance[] =
-	{ "from=[graphical]*", "propagate=[bool]" };
+	{ "from=[graphical]*", 
+	  "propagate=[bool]",
+	  "direction=[{forwards,backwards}]"
+	};
 
 /* Instance Variables */
 
@@ -391,7 +394,7 @@ static senddecl send_tab[] =
      NAME_area, "Top-side of tab"),
   SM(NAME_compute, 0, NULL, computeTab,
      NAME_update, "Recompute area"),
-  SM(NAME_advance, 2, T_advance, advanceTab,
+  SM(NAME_advance, 3, T_advance, advanceTab,
      NAME_focus, "Advance keyboard focus to next item"),
   SM(NAME_ChangedLabel, 0, NULL, ChangedLabelTab,
      NAME_update, "Add label-area to the update")
